--- a/executable/linux_updating/config-default.yml
+++ b/executable/linux_updating/config-default.yml
@@ -2,10 +2,12 @@
 
 working_directory: /tmp/linux-updating/
 terraform:
-  git_url: https://git.example.net/example/terraform.git
+  # For the poc we automaticlly add https:// to the git url, so please dont add it
+  git_url: git.example.net/example/terraform.git
   username: example
   password: super-secret-password
 ansible:
-  git_url: https://git.example.net/example/ansible.git
+  # For the poc we automaticlly add https:// to the git url, so please dont add it
+  git_url: git.example.net/example/ansible.git
   username: example
   password: super-secret-password
