--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
+ansible-runner==2.3.6
+docutils==0.21.2
 gitdb==4.0.11
-GitPython==3.1.43
+lockfile==0.12.2
+packaging==24.0
+pexpect==4.9.0
+ptyprocess==0.7.0
+python-daemon==3.0.1
 PyYAML==6.0.1
+six==1.16.0
 smmap==5.0.1
