--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
+bcrypt==4.1.3
+cffi==1.16.0
+cryptography==42.0.5
 gitdb==4.0.11
 GitPython==3.1.43
+paramiko==3.4.0
+pycparser==2.22
+PyNaCl==1.5.0
 PyYAML==6.0.1
 smmap==5.0.1
